# aethernet-examples

./: .gitignore  .gitmodules  README.md
cpp/arduino-examples/: README.md
cpp/auto-open/: .gitignore  open_project.py
cpp/auto-open/preregistered/: CMakeLists.txt  preregistered.cpp  project_config.ini.in  user_config.h
cpp/auto-open/preregistered/arduino/preregistered/: build_opt.h  preregistered.ino
cpp/auto-open/preregistered/cmake/: CMakeLists.txt
cpp/auto-open/preregistered/esp-idf/: CMakeLists.txt  sdkconfig
cpp/auto-open/preregistered/platformio/: CMakeLists.txt  platformio.ini
cpp/auto-open/preregistered/platformio/preregistered/: CMakeLists.txt
cpp/auto-open/selfregistered/: CMakeLists.txt  project_config.h  project_config.h.in  selfregistered.cpp
cpp/auto-open/selfregistered/arduino/selfregistered/: build_opt.h  selfregistered.ino
cpp/auto-open/selfregistered/cmake/: CMakeLists.txt
cpp/auto-open/selfregistered/esp-idf/: CMakeLists.txt  sdkconfig
cpp/auto-open/selfregistered/esp-idf/selfregistered/: CMakeLists.txt
cpp/auto-open/selfregistered/platformio/: CMakeLists.txt  sdkconfig.esp-wrover-kit  sdkconfig.esp32-c6-devkitc-1
cpp/desktop-ping-pong/: CMakeLists.txt  README.md  build_and_run.bat  build_and_run.sh  build_and_run_release.bat  ping-pong.cpp  user_config.h
cpp/desktop-prepared-ping/: CMakeLists.txt  README.md  aether-prepared-packet.patch  apply_aether_prepared_packet_patch.sh  build_and_run.bat  build_and_run.sh  build_and_run_release.bat  prepared-ping.cpp  user_config.h
cpp/echo_capi/: CMakeLists.txt  platformio.ini
cpp/echo_capi/main/: CMakeLists.txt  main.c
cpp/echo_cpp/: CMakeLists.txt
cpp/echo_cpp/arduino/echo/: build_opt.h  echo.ino  user_config.h
cpp/echo_cpp/main/: CMakeLists.txt  main.cpp
cpp/platformio-ping-pong/: CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.esp-wrover-kit  sdkconfig.esp32-c6-devkitc-1
cpp/platformio-ping-pong/config/: user_config_hydrogen.h  user_config_optimized.h  user_config_sodium.h
cpp/platformio-ping-pong/src/: CMakeLists.txt  aether_construct.h  aether_construct_esp_wifi.h  file_system_init.h  main.cpp  ping-pong.cpp  ping_pong.cpp  ping_pong_main.cpp  user_config.h  user_config_hydrogen.h  user_config_optimized.h  user_config_sodium.h
cpp/platformio-temperature/: README.md
cpp/platformio-temperature/src/: CMakeLists.txt  aether_construct.h  aether_construct_esp_wifi.h  temp_sensor.cpp  temp_sensor.h  temperature.cpp
cpp/smart-home/: CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-c6-devkitc-1  sdkconfig.esp32-s3-devkitm-1
cpp/smart-home/src/: CMakeLists.txt  aether_construct.h  aether_construct_esp_wifi.h  aether_construct_ethernet.h  commutator.cpp  commutator.h  commutator_api_impl.cpp  commutator_api_impl.h  idevice.h  main.cpp  smart_home.cpp  user_config.h
cpp/smart-home/src/api/: api.cpp  api.h  types.h
cpp/smart-home/src/temperature/: esp_temp_sensor.cpp  esp_temp_sensor.h  fake_temp_sensor.cpp  fake_temp_sensor.h  temp_sensor_config.h  temperature_factory.cpp  temperature_factory.h
cpp/temperature-sensor-2/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
cpp/temperature-sensor-2/main/: CMakeLists.txt  controller.cpp  user_config.h
cpp/temperature-sensor-2/main/boards/: aether_esp32_c6.h  m5stack_atom_lite.h  nano_esp32_c6.h
cpp/temperature-sensor-2/main/sensors/: bme688.c  esp_main_utils.c  random_val.c  sensors.h  sht45.c  shtc3.c  stcc4.c  ulp_saved_val.c  ulp_utils.c  utils.h
cpp/temperature-sensor-2/main/sleeping/: esp_main_sleep.cpp  sleeping.h  thread_sleep.cpp  ulp_sleep.cpp
cpp/temperature-sensor-2/src/: CMakeLists.txt  controller.cpp  sleep_manager.cpp  sleep_manager.h  user_config.h
cpp/temperature-sensor-2/ulp/: CMakeLists.txt  main.c
java/point-to-point/: README.md  build.gradle
java/point-to-point/src/main/java/io/aether/examples/: PointToPoint.java
scripts/open_project/: ini_file_functions.py  linux_script.py  macos_script.py  open_project.py  parent_script.py  windows_script.py
temperature-sensor-app/cpp-client/: CMakeLists.txt  client-main.cpp  sensor.cpp  sensor_api.h
temperature-sensor-app/cpp-client/cmake/: CMakeLists.txt
temperature-sensor-app/cpp-client/esp-idf/: sdkconfig
temperature-sensor-app/cpp-client/platformio/: CMakeLists.txt  platformio.ini
temperature-sensor-app/cpp-client/src/: CMakeLists.txt  client-main.cpp  main.cpp  sensor.cpp  sensor.h
temperature-sensor/arduino/TemperatureSensor/: TemperatureSensor.ino  build_opt.h
temperature-sensor/cpp/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp-wrover-kit
temperature-sensor/cpp/main/: CMakeLists.txt  controller.cpp  main.cpp  user_config.h  wifi_provisioning.cpp  wifi_provisioning.h
temperature-sensor/cpp/src/: CMakeLists.txt  controller.cpp  idf_component.yml  main.cpp  preregister.ini  sleep_manager.cpp  sleep_manager.h  user_config.h  wifi_provisioning.cpp  wifi_provisioning.h
temperature-sensor/cpp/src/lp_core/: lp_main.c
temperature-sensor/cpp/ulp/: main.c
